--- a/style.css
+++ b/style.css
@@ -570,3 +570,114 @@ footer span{
     padding-top: 1rem;
     border-top: 1px solid #dee2e6;
 }
+
+
+/* responsive design -------------------------------------------------------------- */
+
+@media (max-width: 1200px) {
+    .hero{
+        padding: 0rem 4rem;
+        margin-top: 3rem;
+    }
+    .hero-content h1{
+        font-size: 2rem;
+        line-height: 2rem;
+    }
+    .hero-content p{
+        font-size: 1rem;
+    }
+
+    .carousel-section{
+        padding: 0rem 4rem;
+    }
+
+    .feature-section{
+        padding: 0rem 4rem;
+    }
+    .feature-section .feature-title{
+        font-size: 1.5rem;
+    }
+
+    .get-started-single{
+        margin: 3rem 4rem !important;
+        max-height: 200px !important;
+    }
+}
+
+@media (max-width: 820px) {
+    .hero{
+        padding: 0rem 4rem;
+        margin-top: 3rem;
+    }
+    .hero-content h1{
+        font-size: 2rem;
+        line-height: 2rem;
+    }
+    .hero-content p{
+        font-size: 1rem;
+    }
+
+    .descarga-gratis{
+        display: none !important;
+    }
+
+    .carousel-section{
+        padding: 0rem 4rem;
+    }
+
+    .feature-section{
+        padding: 0rem 4rem;
+        flex-direction: column;
+    }
+    .feature-section .feature-title{
+        font-size: 1.5rem;
+    }
+    .feature-content{
+        min-height: auto;
+    }
+    .rich-features-section{
+        flex-direction: column-reverse;
+    }
+
+    .get-started-single.image-bottom-left{
+        min-height: 300px ;
+    }
+}
+
+@media (max-width: 530px) {
+
+    .hero{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 2rem;
+    }
+    .hero-image{
+        display: none;
+    }
+
+    .carousel-section{
+        padding: 0 1rem;
+    }
+
+    .carousel-navigation{
+        display: none;
+    }
+    .menu{
+        display: none;
+    }
+
+    .feature-section{
+        padding: 1rem;
+    }
+
+    .get-started-single.image-bottom-left .buttons{
+        display: flex;
+        flex-direction: column !important;
+    }
+
+    footer{
+        height: 100%;
+    }
+}
